3-1项目集成了art-template

--- a/src/public/views/login.html
+++ b/src/public/views/login.html
@@ -84,7 +84,7 @@
                $("#vcodeimgId").attr('src',`/account/vcode?aaa=${Math.random()}`)
 
             }else{
-                location = 'account/student'
+                location = '/student/list'
                 
             }
             
